changes made to make the app mobile responsive

--- a/src/styles/_homepage.scss
+++ b/src/styles/_homepage.scss
@@ -10,6 +10,14 @@
   margin-top: 3rem;
 }
 
+.header-image-home {
+  min-height: 60vh;
+    background: url("../imgs/iggy.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+
 .learn-how {
   padding: 0.5rem 3.5rem;
   margin-top: -2rem;
@@ -20,13 +28,18 @@
   font-weight: 400;
   border-radius: 4.3rem;
   font-family: "Cabin", sans-serif;
-  cursor: pointer;
+  z-index: 1;
+}
+
+.play-icon {
+  font-size: 80px;
 }
 
 .oceaneers-cabin-large {
   font-family: "Cabin", sans-serif;
   font-weight: 700;
   font-size: 6.5rem;
+  margin-top: 15rem;
 }
 
 .oceaneers-cabin-small {
@@ -207,7 +220,7 @@
 }
 
 // iphone X
-@media (width: 375px) {
+@media (max-width: 540px) {
   .learn-how {
     padding: 0.5rem 2rem;
     margin-top: -1.8rem;
@@ -220,10 +233,16 @@
   .oceaneers-cabin-large {
     font-weight: 700;
     font-size: 4rem;
+    margin-top: 18rem;
+    // margin-top: -30rem;
   }
   .oceaneers-cabin-small {
     font-weight: 400;
     font-size: 2rem;
+  }
+
+  .play-icon {
+    font-size: 80px;
   }
   .oceaneers-cabin {
     font-weight: 700;
@@ -279,40 +298,24 @@
     font-size: 2rem;
   }
   // this stuff is not working 
-  .card-title {
+  h1.card-title {
     font-family: "Cabin", sans-serif;
-    font-size: 0.1rem;
+    font-size: 2rem;
     font-weight: 200;
-    margin-top: 15%;
+    margin: auto;
   }
   
   .card-text {
-    font-family: "Raleway", sans-serif;
-    font-size: 0.1rem;
-    font-weight: 200;
-    margin-top: 35%;
-    margin-left: 10%;
-    margin-right: 10%;
+    display: none;
   }
   
   .card-text-brand {
-    font-family: "Raleway", sans-serif;
-    font-size: 2rem;
-    font-weight: 400;
-    margin-top: 10%;
-    margin-left: 10%;
-    margin-right: 10%;
+    display: none;
   }
   
   .card-text-ocean {
-    font-family: "Raleway", sans-serif;
-    font-size: 2rem;
-    font-weight: 400;
-    margin-top: 20%;
-    margin-left: 10%;
-    margin-right: 10%;
+    display: none;
   }
-  // end of what isnt working 
   .why {
     margin-top: 5rem;
     font-size: 3rem;
@@ -333,6 +336,4 @@
     border-radius: 4.3rem;
     font-family: "Cabin", sans-serif;
   }
-  
-  
 }
