--- a/src/styles/_partners.scss
+++ b/src/styles/_partners.scss
@@ -1,6 +1,6 @@
 // Responsiveness
 // mobile size
-@media (min-width: 320px) {
+@media (min-width: 320px) and (max-width: 499px) {
   // Header Image
   section.header-image-partner {
     min-height: 60vh;
@@ -161,7 +161,7 @@
   }
 }
 
-@media (min-width: 500px) {
+@media (min-width: 500px) and (max-width: 767px) {
   section.header-image-partner {
     p.header {
       font-size: 5rem;
@@ -196,6 +196,23 @@
     margin-right: 6rem;
     line-height: 3rem;
   }
+  button.carousel-control-next {
+    float: right;
+    position: relative;
+    display: inline;
+    margin-bottom: 2rem;
+    .bi-arrow-right-circle {
+      top: -1rem;
+    }
+  }
+  button.carousel-control-prev {
+    position: relative;
+    display: inline;
+    float: left;
+    .bi-arrow-left-circle {
+      top: -1rem;
+    }
+  }
   h5.partner-card-title {
     font-size: 2.4rem;
     line-height: 3rem;
@@ -208,20 +225,23 @@
     font-size: 1.6rem;
     line-height: 2rem;
   }
-  div.rounded-circle {
-    position: relative;
-    width: 20rem;
-    height: 20rem;
-    padding: 2rem;
-    margin-left: 2.5rem;
-    margin-right: 2.5rem;
-    margin-top: 2rem;
-    background-color: #e2f0ef !important;
+  #circleCarousel {
+    margin-bottom: 3rem;
+    div.rounded-circle {
+      position: relative;
+      width: 20rem;
+      height: 20rem;
+      padding: 2rem;
+      margin-left: 2.5rem;
+      margin-right: 2.5rem;
+      margin-top: 2rem;
+      background-color: #e2f0ef !important;
+    }
   }
 }
 
 // Tablet
-@media (min-width: 768px) {
+@media (min-width: 768px) and (max-width: 1023px) {
   // Header Image
   section.header-image-partner {
     p.header {
@@ -284,69 +304,92 @@
   }
 
   // Carousel touch points
-  .carousel-control-next {
-    height: 5rem;
-  }
-  .carousel-control-prev {
-    height: 5rem;
+  #gridCarousel {
+    button.carousel-control-next {
+      float: right;
+      position: relative;
+      display: inline;
+      margin-bottom: 2rem;
+      .bi-arrow-right-circle {
+        top: -3rem;
+      }
+    }
+    button.carousel-control-prev {
+      position: relative;
+      display: inline;
+      float: left;
+      .bi-arrow-left-circle {
+        top: -3rem;
+      }
+    }
   }
   // Circle Carousel
-  // Cards w image
-  div.rounded-circle {
-    position: relative;
-    width: 18rem;
-    height: 18rem;
-    padding: 1.8rem;
-    margin-left: 2.5rem;
-    margin-right: 2.5rem;
-    margin-top: 2rem;
-    background-color: #e2f0ef !important;
-  }
-
-  // Accordions
-  .accordion-partners {
-    div.accordion-body {
-      margin-top: -3rem;
-      width: 19rem;
-    }
-    p.text-accordion {
-      font-size: 1.4rem;
-      font-weight: 500;
-      padding-top: 4rem;
-      padding-left: 1rem;
-      padding-right: 1rem;
-    }
-    h2.accordion-header {
-      button.button-accordion {
-        font-size: 1.6rem;
-        margin-top: 1rem;
-        height: 5rem;
-        width: 19rem;
-        line-height: 2.2rem;
-        margin-left: 0rem;
-      }
-
-      i.plus-icon-partners {
-        position: absolute;
-        top: 1.5rem;
-        right: 1rem;
-        font-size: 1.8rem;
-      }
-    }
-  }
   #circleCarousel {
-    i.left-arrow-bottom-circles {
-      margin-top: 2rem;
-      margin-left: 1rem;
+    margin-bottom: 4rem;
+    button.carousel-control-next {
+      float: right;
+      position: relative;
+      display: inline;
+      margin-bottom: 2rem;
+      .bi-arrow-right-circle {
+        top: 0.5rem;
+      }
     }
-    i.right-arrow-bottom-circles {
-      margin-top: 2rem;
-      margin-right: 1rem;
+    button.carousel-control-prev {
+      position: relative;
+      display: inline;
+      float: left;
+      .bi-arrow-left-circle {
+        top: 0.5rem;
+      }
+    }
+    // Cards w image
+    div.rounded-circle {
+      position: relative;
+      width: 18rem;
+      height: 18rem;
+      padding: 1.8rem;
+      margin-left: 2.5rem;
+      margin-right: 2.5rem;
+      margin-top: 0rem;
+      background-color: #e2f0ef !important;
+    }
+
+    // Accordions
+    .accordion-partners {
+      div.accordion-body {
+        margin-top: -3rem;
+        width: 19rem;
+      }
+      p.text-accordion {
+        font-size: 1.4rem;
+        font-weight: 500;
+        padding-top: 4rem;
+        padding-left: 1rem;
+        padding-right: 1rem;
+      }
+      h2.accordion-header {
+        button.button-accordion {
+          font-size: 1.6rem;
+          margin-top: 1rem;
+          height: 5rem;
+          width: 19rem;
+          line-height: 2.2rem;
+          margin-left: 0rem;
+        }
+
+        i.plus-icon-partners {
+          position: absolute;
+          top: 1.5rem;
+          right: 1rem;
+          font-size: 1.8rem;
+        }
+      }
     }
   }
 }
 // large tablet/small desktop
-@media (min-width: 1024px) {
+@media (min-width: 1024px) and (max-width: 1279px) {
   section.header-image-partner {
     min-height: 40vw;
     p.header {
