--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -12,6 +12,10 @@ html {
   font-size: 62.5%;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 .main-head {
   background: #024a63;
   color: white;
@@ -381,13 +385,13 @@ nav ul {
           flex-direction: column;
 }
 
-.compare .indust .sub-title {
+.compare .indust .sub-title-why {
   font-size: 4.5rem;
   font-weight: bold;
   color: #024a63;
 }
 
-.compare .indust .sub-desc {
+.compare .indust .sub-desc-why {
   font-size: 2.4rem;
   font-weight: normal;
   color: #024a63;
@@ -425,9 +429,9 @@ nav ul {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  width: 45rem;
-  height: 35rem;
-  margin-right: 1rem;
+  width: 55rem;
+  height: 45rem;
+  margin-right: 3rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -446,12 +450,12 @@ nav ul {
 }
 
 .compare .card-itself h5 {
-  font-size: 2.5rem;
+  font-size: 3rem;
 }
 
 .compare .card-itself h6 {
-  font-size: 1.5rem;
-  margin-bottom: 2.5rem;
+  font-size: 2rem;
+  margin-bottom: 3rem;
 }
 
 .compare .non-indust-card {
@@ -477,8 +481,8 @@ nav ul {
   background-size: cover;
   background-position: center;
   background: url("../imgs/camel.png");
-  width: 45rem;
-  height: 35rem;
+  width: 55rem;
+  height: 45rem;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
@@ -495,27 +499,43 @@ nav ul {
 }
 
 .compare .card-itself-two h5 {
-  margin-top: 22rem;
-  font-size: 2.5rem;
+  margin-top: 28.5rem;
+  font-size: 3rem;
 }
 
 .compare .card-itself-two h6 {
-  font-size: 1.5rem;
+  font-size: 2rem;
 }
 
 .compare .green-bar {
+  position: relative;
   background-color: #024a63;
   color: white;
-  width: 35rem;
-  height: 3.5rem;
+  width: 38rem;
+  height: 4rem;
   margin-bottom: 1rem;
   text-align: center;
   border-radius: 1rem;
 }
 
 .compare .green-bar h5 {
+  text-align: center;
+  font-size: 1.8rem;
   padding-top: 1rem;
-  padding-bottom: 1rem;
+  padding-bottom: 2rem;
+}
+
+.compare .green-bar .plusBoy {
+  position: absolute;
+  top: 0rem;
+  right: 0;
+  -webkit-transform: translate(-90%, 20%);
+          transform: translate(-90%, 20%);
+  cursor: pointer;
+}
+
+.compare .green-bar .plusBoy i {
+  font-size: large;
 }
 
 .hrLine {
@@ -592,6 +612,31 @@ nav ul {
   width: 95%;
   margin: auto;
   height: 100rem;
+}
+
+/* mobile responsive */
+@media screen and (max-width: 1091px) {
+  .intro-why .title {
+    font-size: 4rem;
+  }
+  .intro-why .desc {
+    font-size: 2rem;
+  }
+  .indust .sub-title-why {
+    font-size: 4rem !important;
+  }
+  .indust .sub-desc-why {
+    font-size: 2rem !important;
+  }
+  .explanation-content h2 {
+    font-size: 4rem !important;
+  }
+  .explanation-content h4 {
+    font-size: 2rem !important;
+  }
+  .carousel-title-why h3 {
+    font-size: 4rem !important;
+  }
 }
 
 .newsLetter {
